# Alice

./: .travis.yml  README.md  README.rst  requirements.txt  setup.cfg  tox.ini
Alice/: Brain.py
Alice/test/: BrainTest.py  test_Brain.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_static/: documentation_options.js
src/Alice/: Brain.py
src/Alice.egg-info/: PKG-INFO  SOURCES.txt
tests/test_Alice/: test_Brain.py
