[metadata]
name = Alice
version = 0.0.0
license = MIT
description = little assistant tools
long_description = file: README.rst
author = EnochXDDD
author_email = wumf129@gmail.com
classifiers =
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    python_version == "3.7"

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.rst