[metadata]
name = Alice
version = 0.0.0
license = MIT
description = little assistant tools
long_description = file: README.rst
url = https://github.com/EnochXDDD/Alice
author = EnochXDDD
author_email = wumf129@gmail.com
platform = any
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.rst